// table, select the proper icon (see legend at the bottom of this documents)
// and adapt the link to point to your pull request. Please dont forget
// the empty line separators.

////
| 🎁🐛✨🐣🗑️
|
| https://github.com/knative/client/pull/[#]
////

## Unreleased

[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🐛
| Fix panic for `kn source apiserver` and `kn source binding` describe with Sink URI
| https://github.com/knative/client/pull/901[#901]

| 🐛
| Fix Panic for `kn trigger describe` with Sink URI
| https://github.com/knative/client/pull/900[#900]

| 🎁
| Group commands in usage output with `kn --help`
| https://github.com/knative/client/pull/887[#887]

| 🎁
| Add commands to manage Broker resource
| https://github.com/knative/client/pull/894[#894]
|===

## v0.15.2 (2020-06-16)

[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🐛
| Fix build.sh for macOS users
| https://github.com/knative/client/pull/883[#883]

| 🐛
| Return error message when using --untag with nonexistent tag
| https://github.com/knative/client/pull/880[#880]

| ✨
| Update go.mod to specify the module is go1.14
| https://github.com/knative/client/pull/866[#866]
|===

## v0.15.1 (2020-06-03)

[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🐛
| Update flag names to `--request` and `--limit`
| https://github.com/knative/client/pull/872[#872]

| 🐛
| Fix `kn source -h`
| https://github.com/knative/client/pull/846[#846]

| ✨
| Update to Knative serving and eventing 0.15.0
| https://github.com/knative/client/pull/810[#810]

| 🎁
| Add `--ce-override` flag for apiserver and ping sources
| https://github.com/knative/client/pull/865[#865]

| 🐣
| Check `deletionTimestamp` for `kn revision delete`
| https://github.com/knative/client/pull/860[#860]

| 🎁
| Add `--requests` and `--limits` flags for resource requirements
| https://github.com/knative/client/pull/859[#859]

| 🐣